--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,12 +17,12 @@
           android:id="@+id/imgProfile"
           android:layout_width="@dimen/_55sdp"
           android:layout_height="@dimen/_55sdp"
-          android:src="@drawable/ic_profile"
+          android:src="@drawable/ic_user_no_img_icon"
           app:civ_border_color="@color/screenBackground"
           app:civ_border_width="@dimen/_1sdp"
           android:layout_centerInParent="true"
           android:layout_alignParentStart="true"
-          android:layout_marginStart="@dimen/_7sdp"/>
+          android:layout_marginStart="@dimen/_5sdp"/>
 
       <com.app.l_pesa.common.CommonTextRegular
           android:id="@+id/txtName"
