--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -149,7 +149,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".20"/>
+            android:layout_weight=".15"/>
 
         <LinearLayout
             android:layout_marginEnd="@dimen/_12sdp"
@@ -179,16 +179,26 @@
                 android:textColor="@color/color_gray_text"/>
 
 
-                <SeekBar
-                    android:id="@+id/seekBar"
-                    android:layout_centerInParent="true"
+                <com.warkiz.widget.IndicatorStayLayout
+                    android:id="@+id/seekBarLayout"
+                    android:layout_below="@+id/credit_score_label"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_15sdp"
-                    android:layout_marginStart="@dimen/_2sdp"
-                    android:layout_marginEnd="@dimen/_2sdp"
-                    android:thumb="@drawable/ic_pointer"
-                    android:background="@drawable/seekbar"
+                    android:layout_height="wrap_content">
+
+                    <com.warkiz.widget.IndicatorSeekBar
+                        android:id="@+id/seekBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:isb_show_indicator="rectangle"
+                        app:isb_track_background_color="@color/colorRed"
+                        app:isb_track_background_size="@dimen/_7sdp"
+                        app:isb_track_progress_color="@color/colorApp"
+                        app:isb_track_progress_size="@dimen/_7sdp"
+                        app:isb_thumb_color="@color/colorAquaDeep"
                     />
+                    <!--your layout-->
+                </com.warkiz.widget.IndicatorStayLayout>
+
 
 
             <com.app.l_pesa.common.CommonTextRegular
@@ -196,8 +206,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/seekBar"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_below="@+id/seekBarLayout"
+                android:layout_marginTop="@dimen/_1sdp"
                 android:textSize="@dimen/_12sdp"
                 android:textColor="@color/color_gray_text"
                 android:layout_marginEnd="@dimen/_5sdp"
@@ -208,33 +218,23 @@
                 android:layout_alignParentStart="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/seekBar"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_below="@+id/seekBarLayout"
+                android:layout_marginTop="@dimen/_1sdp"
                 android:textSize="@dimen/_12sdp"
                 android:textColor="@color/color_gray_text"
                 android:layout_marginStart="@dimen/_10sdp"
-                />
-                <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txt_middle"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/seekBar"
-                android:layout_marginTop="@dimen/_3sdp"
-                android:textSize="@dimen/_12sdp"
-                android:textColor="@color/color_gray_text"
-                />
+            />
 
         </RelativeLayout>
 
     </LinearLayout>
 
-    <View
+        <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".20"/>
+        android:layout_weight=".15"/>
 
-    <LinearLayout
+        <LinearLayout
         android:id="@+id/ll_banner"
         android:layout_marginEnd="@dimen/_12sdp"
         android:layout_marginStart="@dimen/_12sdp"
@@ -255,10 +255,10 @@
 
     </LinearLayout>
 
-    <View
+        <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".20"/>
+        android:layout_weight=".15"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/loan_list"
@@ -266,7 +266,7 @@
         android:layout_marginStart="@dimen/_12sdp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.65"
+        android:layout_weight="4.80"
         />
 
     </LinearLayout>
