--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -156,7 +156,7 @@
             android:layout_marginStart="@dimen/_12sdp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.50"
+            android:layout_weight="1.75"
             android:background="@color/semi_white"
             android:orientation="horizontal"
          >
@@ -190,13 +190,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:isb_show_indicator="rectangle"
-                        app:isb_track_background_color="@color/colorRed"
+                        app:isb_track_background_color="#2bbd83"
                         app:isb_track_background_size="@dimen/_7sdp"
-                        app:isb_track_progress_color="@color/colorApp"
+                        app:isb_track_progress_color="#fc3026"
                         app:isb_track_progress_size="@dimen/_7sdp"
-                        app:isb_thumb_color="@color/colorAquaDeep"
+                        app:isb_thumb_color="#08a9ea"
+
                     />
-                    <!--your layout-->
+
                 </com.warkiz.widget.IndicatorStayLayout>
 
 
@@ -266,250 +267,13 @@
         android:layout_marginStart="@dimen/_12sdp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.80"
+        android:layout_weight="4.55"
         />
 
     </LinearLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
 
-
-<!--<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipeRefreshLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-  <RelativeLayout
-    android:id="@+id/rootLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-
-    <LinearLayout
-        android:id="@+id/total_header"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginRight="@dimen/_15sdp"
-        android:layout_marginLeft="@dimen/_15sdp"
-        android:background="@color/colorAccent"
-       >
-
-        <RelativeLayout
-            android:id="@+id/total_header_left"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_40sdp"
-            android:background="@color/semi_white">
-
-            <ImageView
-                android:id="@+id/left_header"
-                android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_centerInParent="true"
-                app:srcCompat="@drawable/ic_my_fixed_deposit"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"
-
-                />
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:layout_below="@+id/left_header"
-                android:id="@+id/left_header_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorApp"
-                android:textSize="@dimen/_13sdp"
-                android:layout_centerHorizontal="true"
-                />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/_5sdp"
-            android:paddingBottom="@dimen/_5sdp"
-            android:background="@color/semi_white"
-            >
-
-            <LinearLayout
-                android:layout_width="@dimen/_1sdp"
-                android:layout_height="match_parent"
-                android:background="@color/color_gray_light"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginBottom="@dimen/_2sdp"
-                android:layout_centerInParent="true">
-
-            </LinearLayout>
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/total_header_right"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_40sdp"
-            android:background="@color/semi_white"
-            android:gravity="center"
-            >
-
-            <ImageView
-                android:id="@+id/right_header"
-                android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                app:srcCompat="@drawable/ic_my_savings_account"
-                android:layout_centerInParent="true"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"
-
-
-                />
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:layout_below="@+id/right_header"
-                android:id="@+id/right_header_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorApp"
-                android:textSize="@dimen/_13sdp"
-                android:layout_centerHorizontal="true"
-                />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/header_below_layout"
-        android:layout_marginTop="@dimen/_7sdp"
-        android:layout_marginEnd="@dimen/_15sdp"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_below="@+id/total_header"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_65sdp"
-        android:paddingEnd="@dimen/_5sdp"
-        android:paddingStart="@dimen/_5sdp"
-        android:background="@color/semi_white">
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/credit_score_label"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_12sdp"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:textColor="@color/color_gray_text"/>
-
-        <SeekBar
-            android:id="@+id/seek_bar"
-            android:layout_centerInParent="true"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_10sdp"
-            android:background="@drawable/progressbar_background"
-
-            />
-        <ImageView
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_pointer"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/_12sdp"
-            android:layout_marginStart="@dimen/_12sdp"/>
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/full_score"
-            android:layout_alignParentEnd="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/seek_bar"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:textSize="@dimen/_12sdp"
-            android:textColor="@color/color_gray_text"
-
-            />
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/start_score"
-            android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/seek_bar"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:textSize="@dimen/_12sdp"
-            android:textColor="@color/color_gray_text"
-            />
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/score_made"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/seek_bar"
-            android:layout_marginTop="6dp"
-            android:textSize="@dimen/_12sdp"
-            android:textColor="@color/color_gray_text"
-            />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/banner_layout"
-        android:layout_below="@+id/header_below_layout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_75sdp"
-        android:layout_marginTop="@dimen/_7sdp"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginEnd="@dimen/_15sdp">
-        
-        <ImageView
-            android:contentDescription="@string/app_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-           />
-        <ImageView
-            android:id="@+id/close_banner"
-            android:contentDescription="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="@dimen/_5sdp"
-           />
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_below="@+id/banner_layout"
-        android:layout_marginTop="@dimen/_7sdp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_15sdp"
-        android:layout_marginStart="@dimen/_15sdp">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/loan_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@color/screenBackground">
-
-        </android.support.v7.widget.RecyclerView>
-
-    </RelativeLayout>
-
-  </RelativeLayout>
-
-</android.support.v4.widget.SwipeRefreshLayout>-->
 
 
 
