--- a/app/src/main/res/layout/activity_registration_step_one.xml
+++ b/app/src/main/res/layout/activity_registration_step_one.xml
@@ -64,6 +64,7 @@
             android:hint="@string/phone_no"
             android:inputType="numberSigned"
             android:maxLines="1"
+            android:maxLength="15"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:textColor="@color/colorSemiWhite"
@@ -157,6 +158,7 @@
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
             android:maxLines="1"
+            android:maxLength="35"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:textColor="@color/colorSemiWhite"
