--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -106,6 +106,8 @@
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_marginEnd="@dimen/_2sdp"
                 />
 
         </RelativeLayout>
