--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -77,6 +77,7 @@
             android:hint="@string/phone_no"
             android:inputType="numberSigned"
             android:maxLines="1"
+            android:maxLength="15"
             app:layout_constraintStart_toEndOf="@id/view14"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
@@ -89,6 +90,7 @@
             app:layout_constraintTop_toTopOf="parent" />
         <ImageView
             android:id="@+id/imageView34"
+            android:contentDescription="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_3sdp"
@@ -160,6 +162,7 @@
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
             android:maxLines="1"
+            android:maxLength="35"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:textColor="@color/colorSemiWhite"
