--- a/app/src/main/res/layout/content_investment_apply.xml
+++ b/app/src/main/res/layout/content_investment_apply.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipeRefreshLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".investment.view.InvestmentApplyActivity"
-    tools:showIn="@layout/activity_investment_apply"
+    tools:showIn="@layout/activity_investment_apply">
+
+ <android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:id="@+id/rootLayout">
 
     <LinearLayout
@@ -65,6 +65,7 @@
                         android:layout_height="match_parent"
                         android:hint="@string/choose_a_plan"
                         android:longClickable="false"
+                        android:focusable="false"
                         android:textColor="@color/light_text_color"
                         android:textSize="@dimen/_13sdp"
                         android:drawableEnd="@drawable/ic_dropdown" />
