--- a/app/src/main/res/layout/content_profile_edit_contact_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_contact_info.xml
@@ -59,6 +59,8 @@
                         android:layout_marginTop="@dimen/_5sdp"
                         android:hint="@string/street_physical_address"
                         android:inputType="text"
+                        android:maxLines="1"
+                        android:maxLength="35"
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -82,6 +84,8 @@
                         android:layout_height="match_parent"
                         android:hint="@string/postal_code_address"
                         android:inputType="text"
+                        android:maxLines="1"
+                        android:maxLength="20"
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -128,6 +132,8 @@
                         android:layout_height="match_parent"
                         android:hint="@string/email_address"
                         android:inputType="text"
+                        android:maxLines="1"
+                        android:maxLength="25"
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -151,6 +157,8 @@
                         android:layout_height="match_parent"
                         android:hint="@string/second_mob_no"
                         android:inputType="text"
+                        android:maxLines="1"
+                        android:maxLength="15"
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
                 </com.app.l_pesa.common.CommonInputLayout>
