--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -1,57 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".pin.view.ChangePinActivity"
-    tools:showIn="@layout/activity_change_pin"
-    android:weightSum="10"
-    android:orientation="vertical"
-    android:background="@color/screenBackground">
+    android:background="@color/screenBackground"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".25"
-        android:orientation="vertical"
-        />
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4.25"
-        android:orientation="vertical"
-        android:weightSum="7.50"
-        android:background="@drawable/bg_white_view"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp">
-
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.85"
-            android:orientation="horizontal"
-            tools:ignore="NestedWeights"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp">
+            android:layout_height="match_parent"
+            android:padding="@dimen/_10sdp">
 
             <com.app.l_pesa.common.CommonInputLayout
+                android:id="@+id/commonInputLayout11"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:passwordToggleEnabled="true"
-                >
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                app:layout_constraintBottom_toTopOf="@+id/commonInputLayout12"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
-                    android:id="@+id/etCurrentPin"
+                    android:id="@+id/etCurrentPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/current_pin"
+                    android:hint="@string/current_password"
                     android:inputType="textPassword"
-                    android:maxLength="6"
+                    android:maxLength="14"
                     android:maxLines="1"
                     android:textSize="@dimen/_13sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
@@ -59,27 +50,21 @@
                     app:autoSizeStepGranularity="0.2sp"
                     app:autoSizeTextType="uniform"
                     android:textColorHint="@color/colorGreyDeep"
-                    />
+                    android:imeOptions="actionDone"/>
+
             </com.app.l_pesa.common.CommonInputLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.85"
-            android:orientation="horizontal"
-            tools:ignore="NestedWeights"
-            android:layout_marginTop="@dimen/_2sdp"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp">
-
             <com.app.l_pesa.common.CommonInputLayout
+                android:id="@+id/commonInputLayout12"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:passwordToggleEnabled="true"
-                >
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                app:layout_constraintBottom_toTopOf="@+id/commonInputLayout13"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout11">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etNewPin"
@@ -95,28 +80,21 @@
                     app:autoSizeStepGranularity="0.2sp"
                     app:autoSizeTextType="uniform"
                     android:textColorHint="@color/colorGreyDeep"
-                    />
+                    android:imeOptions="actionDone"/>
+
             </com.app.l_pesa.common.CommonInputLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.85"
-            android:orientation="horizontal"
-            tools:ignore="NestedWeights"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_3sdp">
-
             <com.app.l_pesa.common.CommonInputLayout
-                android:id="@+id/tilConfirmNewPassword"
+                android:id="@+id/commonInputLayout13"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/_2sdp"
-                >
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout12">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etConfirmNewPin"
@@ -132,72 +110,46 @@
                     app:autoSizeStepGranularity="0.2sp"
                     app:autoSizeTextType="uniform"
                     android:textColorHint="@color/colorGreyDeep"
-                    android:imeOptions="actionDone"
-                    />
+                    android:imeOptions="actionDone"/>
+
             </com.app.l_pesa.common.CommonInputLayout>
 
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".25"
-
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.25"
-            android:orientation="horizontal"
-            tools:ignore="NestedWeights"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_2sdp"
-            android:weightSum="1">
-
-            <com.app.l_pesa.common.CustomButtonRegular
+            <Button
                 android:id="@+id/buttonSubmit"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".45"
-                android:background="@drawable/bg_green_view"
-                android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorAppDeep"
+                android:layout_height="@dimen/_27sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_30sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:background="@drawable/ripple_green_button"
                 android:text="@string/submit"
-                android:textAllCaps="true"
-                />
-            <View
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".10"
-                />
+                android:textStyle="bold"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout13" />
 
-            <com.app.l_pesa.common.CustomButtonRegular
+            <Button
                 android:id="@+id/buttonCancel"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".45"
+                android:layout_height="@dimen/_27sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_grey_view"
-                android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorGreyDeep"
                 android:text="@string/cancel"
-                android:textAllCaps="true"
-
-                />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".50"
-        android:orientation="vertical"
-        />
+                android:textAllCaps="false"
+                android:textColor="@color/light_text_color"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/buttonSubmit"
+                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout13" />
 
 
+        </android.support.constraint.ConstraintLayout>
 
+    </android.support.v7.widget.CardView>
 </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
