--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -167,7 +167,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="@string/email"
-                            android:maxLength="40"
+                            android:maxLength="35"
+                            android:maxLines="1"
                             android:inputType="textEmailAddress"
                             android:textSize="@dimen/_12sdp"
                             android:textColor="@color/textColors"/>
@@ -239,6 +240,8 @@
                             android:hint="@string/edit_mother_maiden_name"
                             android:inputType="text"
                             android:textSize="@dimen/_12sdp"
+                            android:maxLength="25"
+                            android:maxLines="1"
                             android:textColor="@color/textColors"/>
 
                     </com.app.l_pesa.common.CommonInputLayout>
