--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -34,7 +34,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:passwordToggleEnabled="true">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etCurrentPassword"
@@ -64,7 +65,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout11">
+                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout11"
+                app:passwordToggleEnabled="true">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etNewPin"
@@ -94,7 +96,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout12">
+                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout12"
+                app:passwordToggleEnabled="true">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etConfirmNewPin"
