--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -26,7 +27,6 @@
                     style="@style/customInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -114,11 +114,10 @@
                     android:layout_height="@dimen/_27sdp"
                     android:text="@string/submit"
                     android:textAllCaps="false"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:textColor="@color/colorPrimary"
                     android:background="@drawable/ripple_green_button"
                     android:layout_marginEnd="@dimen/_20sdp"
-                    android:layout_marginBottom="@dimen/_10sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -161,7 +160,9 @@
                     android:id="@+id/textView38"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_3sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_3sdp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/password_should"
                     android:textColor="@color/dark_text_color"
@@ -175,7 +176,7 @@
                     android:textSize="@dimen/_10sdp"
                     android:drawableStart="@drawable/ic_red_tick"
                     android:layout_width="0dp"
-                    android:layout_margin="@dimen/_3sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:layout_height="wrap_content"
                     android:text="@string/password_rule_one"
                     app:layout_constraintBottom_toTopOf="@+id/txt_rule_two"
@@ -192,7 +193,6 @@
                     android:drawableStart="@drawable/ic_red_tick"
                     android:layout_height="wrap_content"
                     android:text="@string/password_rule_two"
-                    android:layout_margin="@dimen/_3sdp"
                     app:layout_constraintBottom_toTopOf="@+id/txt_rule_three"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -205,7 +205,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorRed"
                     android:textSize="@dimen/_10sdp"
-                    android:padding="@dimen/_3sdp"
                     android:drawableStart="@drawable/ic_red_tick"
                     android:text="@string/password_rule_three"
                     app:layout_constraintBottom_toTopOf="@+id/txt_rule_four"
@@ -219,7 +218,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_red_tick"
-                    android:padding="@dimen/_3sdp"
                     android:text="@string/password_rule_four"
                     android:textColor="@color/colorRed"
                     android:textSize="@dimen/_10sdp"
@@ -235,7 +233,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorRed"
                     android:textSize="@dimen/_10sdp"
-                    android:padding="@dimen/_3sdp"
                     android:drawableStart="@drawable/ic_red_tick"
                     android:text="@string/password_rule_five"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -247,8 +244,30 @@
 
             </android.support.constraint.ConstraintLayout>
 
-
         </android.support.v7.widget.CardView>
+
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:visibility="invisible"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:indeterminateTint="@color/colorPrimary"/>
+
+
+
+        </android.support.constraint.ConstraintLayout>
+
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
